--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-button-loader": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
